--- a/wasm/res/style.css
+++ b/wasm/res/style.css
@@ -2,12 +2,21 @@
     box-sizing: border-box;
 }
 
-#result{
+textarea{
     width: 100%;
     height: auto;
     padding: 12px 20px;
     border: 2px solid black;
+	border-radius: 10px;
     background-color: whitesmoke;
     font-size: 16px;
     resize: none;
+}
+
+button{
+	padding: 10px;
+	margin: 5px;
+	background-color: wheat;
+	border: 2px solid blue;
+	border-radius: 10px;
 }
